<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout

        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingEnd="@dimen/Layout_padding"
        android:paddingStart="@dimen/Layout_padding"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo_content_Description" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_element_margin_top"
            android:text= "@string/login_text"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="36sp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_element_margin_top"
            app:errorTextAppearance="@style/MyErrorText"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/signinEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/login_enter_email"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_element_margin_top"
            app:errorTextAppearance="@style/MyErrorText"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/signinPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/login_enter_password"
                android:inputType="textPassword"
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/signinButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textSize="@dimen/login_text_size"
            style="@style/login_button"
            />

        <TextView
            android:id="@+id/signinText"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_element_margin_top"
            android:text="@string/login_signup_here"
            android:textSize="@dimen/login_text_size"
            />

        <TextView
            android:id="@+id/forgetPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_element_margin_top"
            android:text="@string/login_forgot_password"
            android:textAlignment="center"
            android:textSize="@dimen/login_text_size"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
