<?xml version="1.0" encoding="utf-8"?>



    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:paddingEnd="@dimen/Layout_padding"
    android:paddingStart="@dimen/Layout_padding"
    android:paddingTop="@dimen/Layout_padding_top"
    >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo_blank"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_component_margin"
            android:text= "@string/forgot_password"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forget_password_text"
            android:textSize="14sp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorTextAppearance="@style/MyErrorText"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_element_margin_top"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText"
                />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_element_margin_top"
            android:text="@string/reset_password"
            style="@style/login_button"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_element_margin_top"

            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/cancel"

            />
        <ProgressBar
            android:id="@+id/reset_password_progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"
             />

    </LinearLayout>
