
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:minWidth="300dp"
        >


        <TextView
            android:id="@+id/updateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title"
            android:padding="10dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textColor="@android:color/white"

            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorTextAppearance="@style/MyErrorText"
            app:errorEnabled="true">
        <EditText
            android:id="@+id/dialogName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lineSpacingExtra="6dp"
            android:textSize="16sp"
            android:hint="@string/new_project_name"
            android:textColor="#333333"
            android:theme="@style/MyEditText"
            />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/ok"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/update_project_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                />
        </LinearLayout>



    </LinearLayout>







