<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alamicompany.collect.ProfileActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/backwindow">

            <ImageButton
                android:id="@+id/profileImageButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/profile_round_border"
                android:elevation="15dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="21dp"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                android:contentDescription="@string/profilephoto"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/relativeLayout">



                <EditText
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/profile_page_name"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:background="@android:color/transparent"

                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/user_profile_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile_page_slogan"
                    android:layout_marginTop="60dp"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:background="@android:color/transparent"
                    tools:ignore="LabelFor" />
            </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_update_float"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        app:borderWidth="8dp"
        app:srcCompat="@drawable/ic_check"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />


</android.support.constraint.ConstraintLayout>


